# Cpp-ci-demo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: TUTORIAL.md
include/: calculator.h
scripts/: build.sh
src/: calculator.cpp  calculator.h  main.cpp
tests/: test_calculator.cpp
